# trickle-spark

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: design.md
src/trickle_spark/: __init__.py  acc.py  accumulate.py  agg.py  aggregate.py  append.py  apply.py  bridge.py  builder.py  changes.py  duckstring.py  run.py  tables.py  zset.py
tests/: conftest.py  helpers.py  test_acc.py  test_agg.py  test_append.py  test_bridge.py  test_builder.py  test_duckstring_bridge.py  test_run.py
